--- a/VentaDeAccesoriosIU/Pages/Usuarios.razor
+++ b/VentaDeAccesoriosIU/Pages/Usuarios.razor
@@ -1,5 +1,5 @@
 ﻿@page "/usuarios"
-@layout UsuariosLayout
+@layout MainLayout
 @inject HttpClient Http
 @using System.ComponentModel.DataAnnotations
 
