--- a/VentaDeAccesoriosIU/Layout/NavMenu.razor
+++ b/VentaDeAccesoriosIU/Layout/NavMenu.razor
@@ -1,22 +1,24 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">VentaDeAccesoriosIU</a>
+        <span class="navbar-brand text-white" @onclick="ToggleNavMenu" style="cursor: pointer;">
+            VentaDeAccesoriosIU
+        </span>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
 </div>
 
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
+<div class="@NavMenuCssClass nav-scrollable" >
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="Home" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link"  href="usuarios">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Usuarios
             </NavLink>
         </div>
         <div class="nav-item px-3">
