--- a/VentaDeAccesoriosIU/Layout/NavMenu.razor
+++ b/VentaDeAccesoriosIU/Layout/NavMenu.razor
@@ -22,8 +22,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="productos">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Productos
             </NavLink>
         </div>
     </nav>
