CORS modificado para publicación, publicación en MONSTER ASP.NET de API RESTful y publicación de base de datos. Funciona exitosamente.

--- a/VentaDeAccesoriosIU/Pages/Usuarios.razor
+++ b/VentaDeAccesoriosIU/Pages/Usuarios.razor
@@ -146,7 +146,7 @@
         .Take(tamanoPagina);
 
 
-    private string baseUrl = "https://localhost:7248/api/Usuario";
+    private string baseUrl = "http://tiendadeaccesorios.runasp.net/api/Usuario";
     private List<Usuario> listaUsuarios = new();
     private Usuario usuario = new();
     private string mensaje = "";
