--- a/VentaDeAccesoriosIU/Layout/NavMenu.razor
+++ b/VentaDeAccesoriosIU/Layout/NavMenu.razor
@@ -26,6 +26,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Productos
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ecommerce">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> E-commerce
+            </NavLink>
+        </div>
     </nav>
 </div>
 
